# ChangeLog for app-laptop/tlp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> -tlp-0.5.ebuild,
  -tlp-0.5-r2.ebuild:
  Remove old ebuilds.

*tlp-0.7 (01 Feb 2015)
  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7.ebuild:
  Latest upstream release.

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-0.5.ebuild,
  tlp-0.5-r2.ebuild tlp-0.6-r1.ebuild:
  Fix $LICENSE of tpacpi-bat (GPL-3 => GPL-3+).

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Update openrc init script (wrt bluetooth/NetworkManager, and USE=deprecated);
  Install COPYING, AUTHORS; Fix $LICENSE of tpacpi-bat (GPL-3 => GPL-3+).

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Also recommended SENSORS_CORETEMP kernel config option.

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Use global "bluetooth" USE flag for pulling in optional bluetooth
  dependencies.

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Depend on x86_energy_perf_policy, provided by either
  sys-power/linux-x86-power-tools or sys-apps/linux-misc-apps.

*tlp-0.6-r1 (09 Oct 2014)
  09 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6-r1.ebuild,
  -tlp-0.6.ebuild, tlp-9999.ebuild
  Fix installation of openrc script, github issue #6 (dbordak)

*tlp-0.6 (07 Oct 2014)

  07 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6.ebuild, tlp-9999.ebuild
  Latest upstream release.
  Added runtime dep on sys-apps/util-linux (though part of the system set).

  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild
  - use $MY_CONFFILE in pkg_preinst()
  - use TLP_WITH_SYSTEMD

  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.5-r2.ebuild
  - don't hardcode /etc/tlp.conf in pkg_preinst(), use $MY_CONFFILE instead
  - "fix" comment regarding RESTRICT=mirror

*tlp-9999 (15 Sep 2014)
*tlp-0.5-r2 (15 Sep 2014)

  15 Sep 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5-r2.ebuild,