@@ -6,7 +6,8 @@ DIST tlp-0.7.tar.gz 65106 SHA256 bd313f478f897a658f2ca7db9665b8ce6796431b952f7df
 DIST tlp-gentoo-patches-0.6.tar.xz 2676 SHA256 da9532945c19d9be7d8b55e4d22fba6101cab2385f591797b3e0a2eca869e9ff SHA512 b9ad6c34781f27e8619af1fa119e2de7034fab415935390e759f127d018a747c16a6da33ffb4a2d1f435874877d454ce1fb22614e90e424a4525943aaf891a4b WHIRLPOOL f665bd0926756b028a5b3d7f6099813dc849fd08e6cfa6401737607a382d0d5a02d87827b93d20fd77f02f4259d77cab9061b0af104780f2c2dfe68f119c7073
 DIST tlp-gentoo-patches-0.7.tar.xz 2648 SHA256 362f3b7d7c04ef15cde43cc287b0496d318b4af5846c7173ba2978aa659410d1 SHA512 5ae9bdefedf571c5ca03b40b386e522603f516293f1009891a40e0ed80e50c867fe59128fffe0e00c61ad8042dac24ca680019ab93f4da8748a1a74916f34f69 WHIRLPOOL 406f685f922acad92fef76e59852a611d5fe3611abde2e0cee164377005fc5ca18740410a21183c385391212e5e5ba1378e0512e873d7b7fbb043eb29a3dda7d
 EBUILD tlp-0.6-r1.ebuild 5189 SHA256 bf3dd43bb581179d5b072441c3ec8f2f72d2ca3cc10e3a1ffa68c1daf2d79053 SHA512 8279d364710bec2846cc5141fc952f78a764c819818e5ee175d0649f20653acd02c66319124b34c263ab870a924cc6918df21c0b4ece02a0b9d1167f90caae6e WHIRLPOOL 20cf684227afc89a18774e871e22efe4e357eb6b08ca6c1be5f622cc57c504c05c29f2d2360c571c94dae05ac1721525a6c115e89c39dc949be04b8ac366379c
+EBUILD tlp-0.7-r1.ebuild 5929 SHA256 a606d67c78425bd08b589efee5b064d9403174ba10d6126ba128c777b1ad8632 SHA512 8ba265aa4c5e20e8dd1c1073c5c942426d6214a2f73b9245e925afd139f61013d028d71f6bf142bdbecb342f1cb303f3aeadae9ad1a4b5f22bac459bd63de2f5 WHIRLPOOL 618c65996207267c3fb85e387f4b6fb0924149c1ba92779028aa00f2d81b5614af89a53d61299b33f5a8a845c7cc7dbeeae4b9c79222b48b05ec8d3bd6fd405f
 EBUILD tlp-0.7.ebuild 5872 SHA256 157e26abfc58b037d68836e9702c294fe9dad21b98c295cdf72f909b489c858c SHA512 9d975372364e870d83c90e7584a3a7af4be680b9ee15d7cf31427fab54df79e47f98c3317fb05e562101f1f3ba4bc28e6facf28fcc28cfd619972d3507cbc046 WHIRLPOOL 5fd78a09f3730ad6d55df5fdef609336140d096062bc4e35b9b7c5357b5d894165aceca006a76e160982c3a217d369d1bb825910ddada044a60de4aeed0cc0c0
-EBUILD tlp-9999.ebuild 6490 SHA256 21c8ac4d26e24da6d7d2dd5ec2bcf375dc1a239220e30802ca26c2c43bf54f57 SHA512 f067bb27ab406621d811171a8c2f07989d5614f46dd4380cb697a9aef75e3ac7a98c0829b9d8bc6bbd2d468e9e4d4eed95fb33ef7cbd9cf114451c8136cc6bc9 WHIRLPOOL cd4854f8dd4084e601b70dff75b104458d95e1feeb35da8cfe6358e81f46ff53418a611cba16ae1677fb17a400ea7bd26a140de5849859e8fe3dd33d7dca5a95
-MISC ChangeLog 11417 SHA256 2d03eed56c70be768a6669e8df0882b72bc6fc6959d88f33c53383115e96d9af SHA512 286b3514f8345e306a43b9ea96c06cf21958c9a85da99b860d4040c708cc798b560a1a938c23a971d54462f0e4ee69f807fce99d3a545ab4728f6c31600fe921 WHIRLPOOL d244fd87748f1681393623b123169ceed261ee4c17a8b08b1865d7b057f3546a8f3003b7a3d9bb78395cbd8a8548609a01efd24d67030e36f66d9137d086b68c
+EBUILD tlp-9999.ebuild 6547 SHA256 59f3e6d8e09504da8f45cb6e8302ec7a01ef445a177f6db31858d10ede85b37e SHA512 b3798209334e329f461bb7fc9a62d21548d213b7f9fe992184a4add028ef429385b997efb3926ef143981aa738c0c9f65147d20559ab04b35b8662dbfb37ed1f WHIRLPOOL 927be46a1a206a74e85b38790804a1bf1f46d8cc26a81ae8412d79b3b9405c3582b29cd9b6dc72899dbb035028426f794cd5dc8857241a89c8cd78ebee1ea62b
+MISC ChangeLog 11629 SHA256 1468af45ef6457b04dddc679a4eb096fa286cf6909b986bb9e4d42f55a2fca98 SHA512 7d5b35448fc0fbbf51e34554e4757d090106bbe1181a304014334d78a3f7dc346ccb35c6b4a231dc8c74563c7c6ad324d30981f7ba1bf4ce89af42eba8e39039 WHIRLPOOL 24ee32382a39c562bc06e45ec4dc19070dde77f909611924b80a0e29eeeafc8f5e09f32e6d309e8fb23856ec6de567e6c8e6032391a4439f3f6ea3e063be31f3
 MISC metadata.xml 2089 SHA256 1e283f1d356f8c38c0f95a16bf3dc7a769834d7a0d9ba9986c327917afc1cfb6 SHA512 e5cd0ca0f6d16c601f83755ac0ef9d509aa454a802c867a4550631130754c719bb1de36ce2f3283ab8bf4ca9177358260d7d7005a15fcaa64a580e681fc7229b WHIRLPOOL 64f5fd3213fa0552d8b5128a06a78e60c04111b50bacbff57dbaa1a92e2a47f51858dc5f6cd6735c5f0be61ab6c10d8c4c9ae7872bc21a4f6e34d14c03edfacc
